fix: reverting z-index of portal to its original; raising it above tooltips makes the editing of individual cells in a portal *not* show the tooltip

--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -92,7 +92,7 @@ $c-pulsar: #513cc6;
 $cf-z--nav-toggle: 9999;
 $cf-z--draggable-resizer-mask: 9950;
 $cf-z--notifications: 9900;
-$cf-z--portal: 12000;
+$cf-z--portal: 9200;
 $cf-z--nav-menu: 9100;
 $cf-z--nav-mask: 9000;
 $cf-z--tabs-dropdown: 8000;
